tests/fixtures/errors/boolean_dim_error.ksr
param x: Length = 1.0 m;
node bad: Dimensionless = @x && true;
